--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ set(SRCS
   test_Column.cpp
   test_ColumnTags.cpp
   test_Database.cpp
+  test_Insert.cpp
   test_Limit.cpp
   test_Select.cpp
   test_Table.cpp
