--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -Wshadow")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-#includes directories
-include_directories(
-  include/
-)
+add_library(mysql_orm INTERFACE)
+target_include_directories(mysql_orm INTERFACE include/)
 
 if (MYSQL_ORM_BUILD_TESTS)
   add_subdirectory(tests)
