--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SRCS
   test_Database.cpp
   test_Insert.cpp
   test_Limit.cpp
+  test_Pack.cpp
   test_Select.cpp
   test_Table.cpp
   test_Update.cpp
